--- a/package.json
+++ b/package.json
@@ -21,5 +21,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "prettier": "^2.0.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@slack/bolt": "^2.0.1"
+  }
 }
