--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "1.0.0",
   "description": "Slackbot for sending multiple DMs",
   "homepage": "https://github.com/rue/slack-bot-multidm",
-  "main": "index.js",
+  "repository": "github:rue/slack-bot-multidm",
+  "main": "dist/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint . --ext js,ts"
+    "lint": "eslint . --ext js,ts",
+    "watch": "concurrently \"tsc -w\" \"nodemon dist/app.js\"",
+    "build": "tsc",
+    "start": "npm run build && node dist/app.js"
   },
   "author": "Eero Säynätkari <hello@eero.dev>",
   "license": "SEE LICENSE IN LICENSE.md",
