--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint . --ext js,ts",
-    "watch": "concurrently \"tsc -w\" \"nodemon dist/app.js\"",
+    "watch": "concurrently \"tsc -w --preserveWatchOutput\" \"nodemon dist/app.js\"",
     "build": "tsc",
     "start": "npm run build && node dist/app.js"
   },
