--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start": "node dist/app.js",
     "dev": "node run build && node run start"
   },
-  "author": "Eero Säynätkari <hello@eero.dev>",
+  "author": "Eero Säynätkari <github+sbmdm@eero.dev>",
   "license": "SEE LICENSE IN LICENSE.md",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.27.0",
@@ -24,7 +24,9 @@
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.2",
-    "prettier": "^2.0.4"
+    "nodemon": "^2.0.3",
+    "prettier": "^2.0.4",
+    "typescript": "^3.8.3"
   },
   "dependencies": {
     "@slack/bolt": "^2.0.1"
