--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "watch": "concurrently \"tsc -w --preserveWatchOutput\" \"nodemon dist/app.js\"",
     "build": "tsc",
     "start": "node dist/app.js",
-    "dev": "node run build && node run start"
+    "dev": "node run build && node run start",
+    "docker-build": "docker build -t rue/slack-bot-multidm:latest -t rue/slack-bot-multidm:$(cat ./package.json | jq -r .version) ."
   },
   "author": "Eero Säynätkari <github+sbmdm@eero.dev>",
   "license": "SEE LICENSE IN LICENSE.md",
